--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 
 # Set here configurations for the database connection
 
-# Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:3306/invent_rest?useSSL=false
+# Connection url for the databases
+spring.datasource.url = jdbc:mysql://localhost:3306/invent_rest?useSSL=false&characterEncoding=UTF-8
 
 # Username and password
 spring.datasource.username = android
@@ -28,9 +28,9 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
-# Naming strategy
+# Naming strategyw
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
