remove unnecessary code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
+
+spring.mvc.dispatch-options-request=true
